--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,1 +1,18 @@
-<h1>Contact</h1>
+
+<div id='content' style='width:70%; margin:0 auto'>
+	<h1>CONTACT ME</h1><br>
+	<div id='contact-nodes'>
+
+		<ul style="list-style-type:none" class="center">
+			<li class="h2" style="margin-bottom:10px"> <div class="bold">Email: </div>pmakkar@berkeley.edu</li>
+			<li class="h2"><div class="bold">Visit my Github: </div>pmakkar</li>
+		</ul>
+	</div>
+
+
+<%= link_to 'Leave me a message!', messages_new_path %>
+
+<h2> Or login for a personal chat with me! </h2>
+<%= link_to 'Login', new_user_session_path, class: "btn btn-primary" %>
+</div>
+
